Store galacy roles and collections under ./galaxy

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 inventory = hosts
-roles_path = ./galaxy-roles:./roles
+roles_path = ./galaxy/roles:./roles
+collections_path = ./galaxy/collections
 
 [ssh_connections]
 pipelineing = true
