--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,4 +1,5 @@
 ---
+rpi_hostname: beth
 rpi_username: pi
 
 # Install the docker python sdk for ansible (community.docker)
@@ -9,3 +10,7 @@ pip_install_packages:
 # A list of system users to be added to the docker group
 docker_users:
   - "{{ rpi_username }}"
+
+# Path for docker containers to mount configs etc.
+docker_service_conf_dir: "/home/{{ rpi_username }}/docker-services"
+traefik_network_name: traefik
