Added roles to playbook

--- a/main.yml
+++ b/main.yml
@@ -5,9 +5,15 @@
 
   vars_files:
     - ./vars/main.yml
+    - ./vars/secrets.yml
 
   roles:
     - essentials
     - geerlingguy.pip
     - geerlingguy.docker_arm
+    - traefik
     - portainer
+    - adguard-home
+    - homer
+    - mariadb
+    - uptime-kuma
