Fix volume mountpoint for mariadb

--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -6,7 +6,7 @@
     ports:
       - "{{ mariadb_port }}:3306"
     volumes:
-      - "mariadb_data:/var/lib/mysql"
+      - "mariadb_data:/config"
     restart_policy: always
     log_driver: json-file
     log_options:
