Added traefik to homer

--- a/roles/homer/files/config.yml
+++ b/roles/homer/files/config.yml
@@ -16,3 +16,6 @@ services:
       - name: Uptime-Kuma
         icon: "fas fa-shield-check"
         url: "http://uptime.beth"
+      - name: Traefik
+        icon: "fas fa-shield-check"
+        url: "http://beth:8082"
