--- a/roles/adguard-home/tasks/main.yml
+++ b/roles/adguard-home/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
+
+- import_tasks: ./deactivate-dnsstublistener.yml
+
 - name: Ensure the config directory exists
   file:
     path: "{{ docker_service_conf_dir }}"
