--- a/roles/monitoring/files/prometheus.yml
+++ b/roles/monitoring/files/prometheus.yml
@@ -22,6 +22,10 @@ scrape_configs:
     static_configs:
       - targets: ["node_exporter:9100"]
 
+  - job_name: "traefik"
+    static_configs:
+      - targets: ["traefik:8080"]
+
   # Example job for cadvisor
   # - job_name: 'cadvisor'
   #   static_configs:
