--- a/main.yml
+++ b/main.yml
@@ -8,14 +8,15 @@
     - ./vars/secrets.yml
 
   roles:
-    - essentials
-    - geerlingguy.pip
-    - geerlingguy.docker_arm
-    - traefik
-    - portainer
-    - adguard-home
-    - homer
-    - mariadb
-    - uptime-kuma
+    # - essentials
+    # - geerlingguy.pip
+    # - geerlingguy.docker_arm
+    # - traefik
+    # - portainer
+    # - adguard-home
+    # - homer
+    # - mariadb
+    # - uptime-kuma
+    # - postgres
     - tandoor-recipes
-    - monitoring
+    # - monitoring
