--- a/roles/adguard-home/tasks/main.yml
+++ b/roles/adguard-home/tasks/main.yml
@@ -6,22 +6,22 @@
   file:
     path: "{{ docker_service_conf_dir }}"
     state: directory
-    owner: "{{ rpi_username }}"
-    group: "{{ rpi_username }}"
+    owner: "{{ username }}"
+    group: "{{ username }}"
 
 - name: Ensure the config subfolder for adguard-home exists
   file:
     path: "{{ docker_service_conf_dir }}/adguard-home"
     state: directory
-    owner: "{{ rpi_username }}"
-    group: "{{ rpi_username }}"
+    owner: "{{ username }}"
+    group: "{{ username }}"
 
 - name: Ensure the config for adguard-home is present
   template:
     src: AdGuardHome.yaml.j2
     dest: "{{ docker_service_conf_dir }}/adguard-home/AdGuardHome.yaml"
-    owner: "{{ rpi_username }}"
-    group: "{{ rpi_username }}"
+    owner: "{{ username }}"
+    group: "{{ username }}"
   notify: restart_adguard-home
 
 - name: Ensure adguard-home is running as a docker container
@@ -41,7 +41,7 @@
       max-file: "10"
     labels:
       traefik.enable: "true"
-      traefik.http.routers.adguard.rule: "Host(`{{ adguard_subdomain }}.{{ rpi_hostname }}`)"
+      traefik.http.routers.adguard.rule: "Host(`{{ adguard_subdomain }}.{{ hostname }}`)"
       traefik.http.services.adguard.loadbalancer.server.port: "80"
     networks:
       - name: "{{ traefik_network_name }}"
