--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -13,7 +13,7 @@
       max-file: "10"
     labels:
       traefik.enable: "true"
-      traefik.http.routers.portainer.rule: "Host(`{{ portainer_subdomain }}.{{ rpi_hostname }}`)"
+      traefik.http.routers.portainer.rule: "Host(`{{ portainer_subdomain }}.{{ hostname }}`)"
       traefik.http.services.portainer.loadbalancer.server.port: "9000"
     networks:
       - name: "{{ traefik_network_name }}"
