--- a/requirements.yml
+++ b/requirements.yml
@@ -3,6 +3,6 @@ roles:
   - name: geerlingguy.docker_arm
   - name: geerlingguy.pip
   - name: geerlingguy.docker
-
+  - name: githubixx.ansible_role_wireguard
 collections:
   - name: community.docker
