Fix wireguard config

--- a/group_vars/raspberry/main.yml
+++ b/group_vars/raspberry/main.yml
@@ -8,3 +8,4 @@ traefik_network_name: traefik
 
 wireguard_address: "10.10.0.2/24"
 wireguard_endpoint: ""
+wireguard_allowed_ips: "10.10.0.2/32,192.168.178.0/24"
