--- a/wireguard.yml
+++ b/wireguard.yml
@@ -9,10 +9,10 @@
     - githubixx.ansible_role_wireguard
 
   tasks:
-    - name: "Enable ip forwarding" 
+    - name: Enable ip forwarding
       sysctl:
         name: net.ipv4.ip_forward
-        value: '0'
+        value: '1'
         sysctl_set: yes
         state: present
         reload: yes
