--- a/wireguard.yml
+++ b/wireguard.yml
@@ -3,7 +3,7 @@
   become: true
   hosts:
     - jerry
-    - raspberry
+    - beth
 
   roles:
     - githubixx.ansible_role_wireguard
@@ -12,7 +12,7 @@
     - name: Enable ip forwarding
       sysctl:
         name: net.ipv4.ip_forward
-        value: '1'
+        value: "1"
         sysctl_set: yes
         state: present
         reload: yes
