--- a/host_vars/beth/main.yml
+++ b/host_vars/beth/main.yml
@@ -4,4 +4,4 @@ username: pi
 
 wireguard_address: "10.10.0.2/24"
 wireguard_endpoint: ""
-wireguard_allowed_ips: "10.10.0.2/32,192.168.178.0/24"
+wireguard_allowed_ips: "10.10.0.2/32, 192.168.178.0/24"
