Move paperless to jerry

--- a/roles/paperless-ngx/tasks/main.yml
+++ b/roles/paperless-ngx/tasks/main.yml
@@ -3,8 +3,8 @@
   file:
     path: "{{ docker_service_conf_dir }}/{{ service_name }}"
     state: directory
-    owner: "{{ rpi_username }}"
-    group: "{{ rpi_username }}"
+    owner: "{{ username }}"
+    group: "{{ username }}"
 
 - name: "Ensure the {{ service_name }} stack is running"
   docker_compose:
@@ -22,12 +22,26 @@
           networks:
             - app
 
+        db:
+          container_name: "{{ service_name }}-db"
+          image: postgres:13
+          restart: unless-stopped
+          volumes:
+            - "{{ service_name }}-db_data:/var/lib/postgresql/data"
+          environment:
+            POSTGRES_DB: paperless
+            POSTGRES_USER: paperless
+            POSTGRES_PASSWORD: "{{ vault_paperless_db_password }}"
+          networks:
+            - app
+
         app:
           container_name: "{{ service_name }}-app"
           image: ghcr.io/paperless-ngx/paperless-ngx:latest
           restart: unless-stopped
           depends_on:
             - broker
+            - db
           healthcheck:
             test: ["CMD", "curl", "-f", "http://localhost:8000"]
             interval: 30s
@@ -41,28 +55,26 @@
           environment:
             COMPOSE_PROJECT_NAME: "{{ service_name }}"
             PAPERLESS_REDIS: redis://broker:6379
-            PAPERLESS_DBHOST: postgres
-            PAPERLESS_DBUSER: postgres
-            PAPERLESS_DBPASS: "{{ vault_postgres_password }}"
+            PAPERLESS_DBHOST: db
+            PAPERLESS_DBUSER: paperless
+            PAPERLESS_DBPASS: "{{ vault_paperless_db_password }}"
             USERMAP_UID: 1000
             USERMAP_GID: 1000
           labels:
             - "traefik.enable=true"
-            - "traefik.http.routers.paperless.rule=Host(`paperless.{{ rpi_hostname }}`)"
+            - "traefik.http.routers.paperless.rule=Host(`paperless.{{ hostname }}`)"
             - "traefik.docker.network={{ traefik_network_name }}"
           networks:
             - app
             - traefik
-            - postgres
 
       volumes:
         paperless-ngx-app_data:
         paperless-ngx-app_media:
         paperless-ngx-broker_data:
+        paperless-ngx-db_data:
 
       networks:
         app:
         traefik:
-          external: true
-        postgres:
           external: true
