--- a/host_vars/jerry/main.yml
+++ b/host_vars/jerry/main.yml
@@ -2,4 +2,4 @@ hostname: jerry
 username: similicious
 
 wireguard_address: "10.10.0.1/24"
-wireguard_endpoint: "{{ hostvars['jerry']['ansible_host'] }}"
+wireguard_endpoint: "20.113.154.172"
