Added postgres and recipes to jerry

--- a/jerry.yml
+++ b/jerry.yml
@@ -7,6 +7,8 @@
     - essentials
     - geerlingguy.pip
     - geerlingguy.docker
-    - traefik
     - portainer
+    - traefik
+    - postgres
+    - tandoor-recipes
     - paperless-ngx
