--- a/host_vars/jerry/main.yml
+++ b/host_vars/jerry/main.yml
@@ -3,3 +3,13 @@ username: similicious
 
 wireguard_address: "10.10.0.1/24"
 wireguard_endpoint: "20.113.154.172"
+
+samba_users:
+  - name: "{{ username }}"
+    password: "{{ vault_samba_user_password }}"
+
+samba_shares:
+  - name: paperless-consume
+    path: "{{ docker_service_conf_dir }}/paperless-ngx/consume"
+    group: "{{ username }}"
+    write_list: "{{ username }}"
