--- a/roles/photoprism/tasks/main.yml
+++ b/roles/photoprism/tasks/main.yml
@@ -1,9 +1,16 @@
 ---
+- name: "Ensure the config subfolder for {{ service_name }} exists"
+  file:
+    path: "{{ docker_service_conf_dir }}/{{ service_name }}"
+    state: directory
+    owner: "{{ username }}"
+    group: "{{ username }}"
+
 - name: "Ensure the {{ service_name }} stack is running"
   docker_compose:
     project_name: "{{ service_name }}"
     definition:
-      version: '3.5'
+      version: "3.5"
 
       # Example Docker Compose config file for PhotoPrism (Linux / AMD64)
       #
@@ -52,28 +59,28 @@
             - seccomp:unconfined
             - apparmor:unconfined
           environment:
-            PHOTOPRISM_ADMIN_PASSWORD: "{{ vault_photoprism_admin_password }}"          # !!! PLEASE CHANGE YOUR INITIAL "admin" PASSWORD !!!
+            PHOTOPRISM_ADMIN_PASSWORD: "{{ vault_photoprism_admin_password }}" # !!! PLEASE CHANGE YOUR INITIAL "admin" PASSWORD !!!
             PHOTOPRISM_SITE_URL: "http://{{ service_name }}.jerry" # public server URL incl http:// or https:// and /path, :port is optional
-            PHOTOPRISM_ORIGINALS_LIMIT: 5000               # file size limit for originals in MB (increase for high-res video)
-            PHOTOPRISM_HTTP_COMPRESSION: "gzip"            # improves transfer speed and bandwidth utilization (none or gzip)
-            PHOTOPRISM_DEBUG: "false"                      # run in debug mode (shows additional log messages)
-            PHOTOPRISM_PUBLIC: "false"                     # no authentication required (disables password protection)
-            PHOTOPRISM_READONLY: "false"                   # don't modify originals directory (reduced functionality)
-            PHOTOPRISM_EXPERIMENTAL: "false"               # enables experimental features
-            PHOTOPRISM_DISABLE_CHOWN: "false"              # disables storage permission updates on startup
-            PHOTOPRISM_DISABLE_WEBDAV: "false"             # disables built-in WebDAV server
-            PHOTOPRISM_DISABLE_SETTINGS: "false"           # disables Settings in Web UI
-            PHOTOPRISM_DISABLE_TENSORFLOW: "false"         # disables all features depending on TensorFlow
-            PHOTOPRISM_DISABLE_FACES: "false"              # disables facial recognition
-            PHOTOPRISM_DISABLE_CLASSIFICATION: "false"     # disables image classification
-            PHOTOPRISM_DARKTABLE_PRESETS: "false"          # enables Darktable presets and disables concurrent RAW conversion
-            PHOTOPRISM_DETECT_NSFW: "false"                # flag photos as private that MAY be offensive (requires TensorFlow)
-            PHOTOPRISM_UPLOAD_NSFW: "true"                 # allows uploads that MAY be offensive
-            PHOTOPRISM_DATABASE_DRIVER: "mysql"            # use MariaDB 10.5+ or MySQL 8+ instead of SQLite for improved performance
-            PHOTOPRISM_DATABASE_SERVER: "db:3306"          # MariaDB or MySQL database server (hostname:port)
-            PHOTOPRISM_DATABASE_NAME: "{{ service_name }}"         # MariaDB or MySQL database schema name
-            PHOTOPRISM_DATABASE_USER: "{{ service_name }}"         # MariaDB or MySQL database user name
-            PHOTOPRISM_DATABASE_PASSWORD: "{{ vault_photoprism_database_password }}"       # MariaDB or MySQL database user password
+            PHOTOPRISM_ORIGINALS_LIMIT: 5000 # file size limit for originals in MB (increase for high-res video)
+            PHOTOPRISM_HTTP_COMPRESSION: "gzip" # improves transfer speed and bandwidth utilization (none or gzip)
+            PHOTOPRISM_DEBUG: "false" # run in debug mode (shows additional log messages)
+            PHOTOPRISM_PUBLIC: "false" # no authentication required (disables password protection)
+            PHOTOPRISM_READONLY: "false" # don't modify originals directory (reduced functionality)
+            PHOTOPRISM_EXPERIMENTAL: "false" # enables experimental features
+            PHOTOPRISM_DISABLE_CHOWN: "false" # disables storage permission updates on startup
+            PHOTOPRISM_DISABLE_WEBDAV: "false" # disables built-in WebDAV server
+            PHOTOPRISM_DISABLE_SETTINGS: "false" # disables Settings in Web UI
+            PHOTOPRISM_DISABLE_TENSORFLOW: "false" # disables all features depending on TensorFlow
+            PHOTOPRISM_DISABLE_FACES: "false" # disables facial recognition
+            PHOTOPRISM_DISABLE_CLASSIFICATION: "false" # disables image classification
+            PHOTOPRISM_DARKTABLE_PRESETS: "false" # enables Darktable presets and disables concurrent RAW conversion
+            PHOTOPRISM_DETECT_NSFW: "false" # flag photos as private that MAY be offensive (requires TensorFlow)
+            PHOTOPRISM_UPLOAD_NSFW: "true" # allows uploads that MAY be offensive
+            PHOTOPRISM_DATABASE_DRIVER: "mysql" # use MariaDB 10.5+ or MySQL 8+ instead of SQLite for improved performance
+            PHOTOPRISM_DATABASE_SERVER: "db:3306" # MariaDB or MySQL database server (hostname:port)
+            PHOTOPRISM_DATABASE_NAME: "{{ service_name }}" # MariaDB or MySQL database schema name
+            PHOTOPRISM_DATABASE_USER: "{{ service_name }}" # MariaDB or MySQL database user name
+            PHOTOPRISM_DATABASE_PASSWORD: "{{ vault_photoprism_database_password }}" # MariaDB or MySQL database user password
             PHOTOPRISM_SITE_TITLE: "PhotoPrism"
             PHOTOPRISM_SITE_CAPTION: "AI-Powered Photos App"
             PHOTOPRISM_SITE_DESCRIPTION: ""
@@ -88,8 +95,9 @@
             - "traefik.docker.network={{ traefik_network_name }}"
           working_dir: "/photoprism"
           volumes:
-            - "{{ service_name }}-app_originals:/photoprism/originals"               # original media files (photos and videos)
-            - "{{ service_name }}-app_storage:/photoprism/storage"                  # *writable* storage folder for cache, database, and sidecar files (never remove)
+            - "{{ service_name }}-app_originals:/photoprism/originals" # original media files (photos and videos)
+            - "{{ service_name }}-app_storage:/photoprism/storage" # *writable* storage folder for cache, database, and sidecar files (never remove)
+            - "{{ docker_service_conf_dir }}/{{ service_name }}/import:/photoprism/import" # *writable* storage folder for cache, database, and sidecar files (never remove)
           logging:
             driver: "json-file"
             options:
