--- a/roles/paperless-ngx/tasks/main.yml
+++ b/roles/paperless-ngx/tasks/main.yml
@@ -9,6 +9,7 @@
 - name: "Ensure the {{ service_name }} stack is running"
   docker_compose:
     project_name: "{{ service_name }}"
+    pull: true
     definition:
       version: "3.4"
 
@@ -53,6 +54,7 @@
             USERMAP_GID: 1000
             PAPERLESS_FILENAME_FORMAT: "{created_year}/{correspondent}/{created} - {title}"
             PAPERLESS_OCR_LANGUAGE: "deu+eng"
+            PAPERLESS_URL: "http://paperless.{{ hostname }}"
           labels:
             - "traefik.enable=true"
             - "traefik.http.routers.paperless.rule=Host(`paperless.{{ hostname }}`)"
