Add new server, cleanup

--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -1,3 +1,9 @@
+# geerlingguy.security
+security_autoupdate_reboot: true
+security_autoupdate_reboot_time: "05:00"
+security_autoupdate_mail_to: "{{ vault_autoupdate_mail_to }}"
+security_autoupdate_mail_on_error: true
+
 # Install the docker python sdk for ansible (community.docker)
 pip_install_packages:
   - name: docker
