--- a/roles/traefik/defaults/main.yml
+++ b/roles/traefik/defaults/main.yml
@@ -1,2 +1,12 @@
 ---
 traefik_network_name: traefik
+traefik_common_args: >
+  --api.insecure=true
+  --providers.docker
+  --providers.docker.exposedByDefault=false
+  --accesslog=true
+  --entryPoints.http.address=:80
+  --entryPoints.https.address=:443
+  --entrypoints.https.http.tls=true
+#  --entryPoints.http.http.redirections.entrypoint.to=https
+#  --entryPoints.http.http.redirections.entrypoint.scheme=https
