--- a/roles/traefik/tasks/main.yml
+++ b/roles/traefik/tasks/main.yml
@@ -13,28 +13,12 @@
       - "8082:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      # - traefik_ssl_certs:/ssl-certs
-    command: >
-      --api.insecure=true
-      --metrics.prometheus=true
-      --providers.docker
-      --providers.docker.exposedByDefault=false
-      --accesslog=true
-      --entryPoints.http.address=:80
-      --entryPoints.https.address=:443
-      --entrypoints.https.http.tls=true
-    #      --entryPoints.http.http.redirections.entrypoint.to=https
-    #      --entryPoints.http.http.redirections.entrypoint.scheme=https
-    #      --entrypoints.https.http.tls.certResolver=letsencrypt
-    #      --entrypoints.https.http.tls.domains[0].main=example.com
-    #      --entrypoints.https.http.tls.domains[0].sans=*.example.com
-    #      --certificatesresolvers.letsencrypt.acme.email=mail@example.com
-    #      --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=hetzner
-    #      --certificatesresolvers.letsencrypt.acme.storage=/ssl-certs/acme.json
+      - traefik_ssl_certs:/ssl-certs
+    command: "{{ traefik_common_args + traefik_args }}"
     networks:
       - name: "{{ traefik_network_name }}"
     env:
-    #      HETZNER_API_KEY: "{{ HETZNER_API_KEY }}"
+      HETZNER_API_KEY: "{{ vault_hetzner_api_key }}"
     restart_policy: always
     log_driver: json-file
     log_options:
