--- a/roles/portainer/tasks/main.yml
+++ b/roles/portainer/tasks/main.yml
@@ -14,7 +14,7 @@
       max-file: "10"
     labels:
       traefik.enable: "true"
-      traefik.http.routers.portainer.rule: "Host(`{{ portainer_subdomain }}.{{ public_domain }}`)"
+      traefik.http.routers.portainer.rule: "Host(`{{ portainer_subdomain }}.{{ public_domain }}`) && ClientIP(`10.10.0.0/16`, `192.168.178.0/24`, `127.0.0.1`, `::1`)"
       traefik.http.services.portainer.loadbalancer.server.port: "9000"
     networks:
       - name: "{{ traefik_network_name }}"
